Search from home page is fully done

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -322,3 +322,14 @@ body{
         margin: 0 auto;
 }
 }
+
+.bold-title {
+    font-size: 18px;
+    font-family: 'Lobster', cursive;
+    padding-bottom: 10px;
+}
+
+
+.social {
+    padding-top: 25px;
+}
